Changed the width
Changed it because it's not responsive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     </nav>
-    <div class="container" style="width: 75rem;">
+    <div class="container">
         <hr>
         <h1>Welcome to Magic Notes</h1>
         <div class="card">
@@ -48,9 +48,7 @@
             <h2>Your Notes</h2>
             <hr>
             <div class="row" id="mynotes">
-
             </div>
-              
         </div>
     </div>
     <script src="script.js"></script>
